--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,24 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        />
+        android:id="@+id/ivCheck"
+        android:layout_width="75dp"
+        android:layout_height="85dp"
+        android:layout_marginLeft="10dp"
+        android:src="@mipmap/ic_check" />
+
     <TextView
-    android:id="@+id/tvName"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="85dp"
+        android:layout_toRightOf="@id/ivCheck"
+        android:gravity="center"
+        android:text="Latte"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:text="12.00 zł"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25dp" />
+
     <Button
         android:id="@+id/bChoose"
-        android:layout_width="60dp"
-        android:layout_height="30dp" />
-
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/tvPrice"
+        android:layout_margin="5dp"
+        android:background="@color/colorPrimary"
+        android:text="Wybierz"
+        android:textColor="@android:color/white"
+        android:textSize="15dp" />
+</RelativeLayout>
